force-app/main/default/objects/Rental__c/Rental__c.object-meta.xml
<CustomObject>
    <label>Rental</label>
    <nameField>
        <displayFormat>RN-{0}</displayFormat>
        <label>Rental Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rentals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>