force-app/main/default/objects/Rental__c/fields/Car__c.field-meta.xml
<CustomField>
    <fullName>Car__c</fullName>
    <deleteConstraint>Cascade</deleteConstraint>
    <label>Car</label>
    <referenceTo>Car__c</referenceTo>
    <relationshipLabel>Rentals</relationshipLabel>
    <relationshipName>Rentals</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>