force-app/main/default/objects/Rental__c/fields/Days_Booked__c.field-meta.xml
<CustomField>
    <fullName>Days_Booked__c</fullName>
    <label>Days Booked</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>