force-app/main/default/objects/Rental__c/fields/Total_Rent__c.field-meta.xml
<CustomField>
    <fullName>Total_Rent__c</fullName>
    <label>Total Rent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>