force-app/main/default/objects/Rental__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Car__c</columns>
    <columns>Contact__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Total_Rent__c</columns>
    <columns>Days_Booked__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>